master: gh prep

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://treblegni.github.io/personal-website",
+  "homepage": "https://treblegni.github.io/personal-website",
   "name": "personal-website",
   "version": "0.1.0",
   "private": true,
