construction-page: first commit

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Portfolio",
+  "name": "Ingelbert's Portfolio",
   "icons": [],
-  "start_url": ".",
+  "start_url": "http://ingelbert.codes",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#5FA9EE"
 }
