changes to package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ingelbert.codes",
+  "homepage": "ingelbert.codes",
   "name": "personal-website",
   "version": "0.1.0",
   "private": true,
